Backport of Bug #47338 assertion in handler::ha_external_lock